# DBCLI

./: CMakeLists.txt  main.cpp
blocks/: TableBlock.cpp  TableBlock.h  registryBlock.cpp  registryBlock.h
databases/: proyecto2  universidad
fields/: Field.cpp  Field.h
master/: BlockManager.cpp  BlockManager.h  BloqueMaestro.cpp  BloqueMaestro.h  DataFile.cpp  DataFile.h
tables/: Table.cpp  Table.h
